--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -295,7 +295,7 @@ if(WITH_PYTHON)
     restarting/from_5.0.0_until_6.3.0/StorefrontTestRestart-2.txt)
   add_fdb_test(
     TEST_FILES restarting/from_5.1.7_until_6.3.0/DrUpgradeRestart-1.txt
-    restarting/from_5.1.7_until_6.3.0/DrUpgradeRestart-2.txt)
+    restarting/from_5.1.7_until_6.3.0/DrUpgradeRestart-2.txt IGNORE)
   add_fdb_test(
     TEST_FILES restarting/from_5.2.0_until_6.3.0/ClientTransactionProfilingCorrectness-1.txt
     restarting/from_5.2.0_until_6.3.0/ClientTransactionProfilingCorrectness-2.txt)
