--- a/packaging/rpm/foundationdb.spec.in
+++ b/packaging/rpm/foundationdb.spec.in
@@ -141,7 +141,7 @@ ifdef(`RHEL6', `/etc/rc.d/init.d/foundationdb', `/lib/systemd/system/foundationd
 %doc /usr/share/doc/foundationdb-clients
 %attr(0775,foundationdb,foundationdb) %dir /etc/foundationdb
 %dir /usr/lib/foundationdb
-/usr/lib/foundationdb/backup_agent/backup_agent
+/usr/bin/backup_agent
 /usr/bin/dr_agent
 /usr/bin/fdbcli
 /usr/bin/fdbdr
