Cherry pick from 7 3 (#185)
* Create build container with zlib for main branch (#173)
* XDB-394 fix. Restore original osx packaging files
* added zlib and set archive repos for no longer supported Debian 10
* renamed variable for readability and added sudo to install
* fix "Unknown error" when  configuring regions
* XDB-328 cherry-pick from 7.3
* XDB-394 fix path to fdbmonitor and backup_agent (#167)
* XDB-436 added fdbconvert to package install targets (#174)
* Xdb 400 7.3 systemd (#175)
* XDB-400 using one systemd service file for RPM and DEB
* XDB-400-7.3 removed code duplication, added systemd support for Debian container
* XDB-400 refactoring, added systemd for ol8
* XDB-400-7.3 fixed rpm post, multiversion server,client post, added WR test in test-deploy
* XDB-394 fix. Restore original osx packaging files (#170)

--- a/fdbbackup/CMakeLists.txt
+++ b/fdbbackup/CMakeLists.txt
@@ -26,13 +26,15 @@ if(NOT OPEN_FOR_IDE)
     fdb_install(PROGRAMS $<TARGET_FILE:fdbbackup> DESTINATION bin COMPONENT clients RENAME fdbrestore)
     fdb_install(PROGRAMS $<TARGET_FILE:fdbbackup> DESTINATION bin COMPONENT clients RENAME dr_agent)
     fdb_install(PROGRAMS $<TARGET_FILE:fdbbackup> DESTINATION bin COMPONENT clients RENAME fdbdr)
+    fdb_install(TARGETS fdbconvert DESTINATION bin COMPONENT clients)
   else()
-    add_custom_target(prepare_fdbbackup_install ALL DEPENDS strip_only_fdbbackup)
+    add_custom_target(prepare_fdbbackup_install ALL DEPENDS strip_only_fdbbackup strip_only_fdbconvert)
     fdb_install(PROGRAMS ${CMAKE_BINARY_DIR}/packages/bin/fdbbackup DESTINATION bin COMPONENT clients)
     fdb_install(PROGRAMS ${CMAKE_BINARY_DIR}/packages/bin/fdbbackup DESTINATION bin COMPONENT clients RENAME backup_agent)
     fdb_install(PROGRAMS ${CMAKE_BINARY_DIR}/packages/bin/fdbbackup DESTINATION bin COMPONENT clients RENAME fdbrestore)
     fdb_install(PROGRAMS ${CMAKE_BINARY_DIR}/packages/bin/fdbbackup DESTINATION bin COMPONENT clients RENAME dr_agent)
     fdb_install(PROGRAMS ${CMAKE_BINARY_DIR}/packages/bin/fdbbackup DESTINATION bin COMPONENT clients RENAME fdbdr)
+    fdb_install(PROGRAMS ${CMAKE_BINARY_DIR}/packages/bin/fdbconvert DESTINATION bin COMPONENT clients)
   endif()
   symlink_files(
     LOCATION packages/bin
